# TXLib

./: CMakeLists.txt  LICENSE  README.md  TXLibDev.code-workspace  txjson.hpp  txmap.hpp
SampleProject/: .gitignore  CMakeLists.txt  CMakePresets.json
SampleProject/assets/shaders/: fragment.frag  vertex.vert
SampleProject/libs/stb_image/: CMakeLists.txt
SampleProject/src/: main.cpp  utility_dump.hpp
TXCMakeUtils/: link_dir_to_bin.cmake  optimization.cmake
TXData/: CMakeLists.txt
TXData/include/impl/: circular_arr.hpp  data_utils.hpp  parted_arr.hpp  sorted_arr.hpp  value_group.hpp
TXData/include/tx/: data.h
TXData/src/: parted_arr.cpp
TXGraphics/: CMakeLists.txt  Readme.md
TXGraphics/dependency/glad/: CMakeLists.txt
TXGraphics/dependency/glad/include/glad/: glad.h
TXGraphics/dependency/glad/include/tx/: upset.hpp
TXGraphics/dependency/glad/src/: glad.c  upset.cpp
TXGraphics/include/impl/: basic_gl_utils.hpp  buffer.hpp  buffer_manager.hpp  draw_call_manager.hpp  fence.hpp  framework.hpp  log.hpp  render_engine.hpp  shader.hpp  shader_manager.hpp  texture.hpp  texture_manager.hpp  vertex_attribute_manager.hpp
TXGraphics/include/impl/abandoned/: buffer_manager.hpp
TXGraphics/include/impl/framework/: framework.hpp
TXGraphics/include/impl/gl_core/: basic_gl_utils.hpp  buffer.hpp  draw_call_manager.hpp  fence.hpp  fence_manager.hpp  shader.hpp  shader_manager.hpp  texture.hpp  utility.hpp  vertex_attribute_manager.hpp
TXGraphics/include/impl/render_engine/: basic_gl_utils.hpp  buffer.hpp  buffer_manager.hpp  draw_call_manager.hpp  fence.hpp  fence_manager.hpp  log.hpp  render_engine.hpp  renderer.hpp  renderer_framework.hpp  shader.hpp  shader_manager.hpp  texture.hpp  texture_manager.hpp  utility.hpp  vertex_attribute_manager.hpp
TXGraphics/include/impl/utility/: animation.hpp  rgb.hpp
TXGraphics/include/tx/: graphics.h
TXGraphics/src/: framework.cpp  render_engine.cpp  renderer.cpp  renderer_framework.cpp  shader.cpp  texture.cpp  txgraphics.hpp
TXGrid/: CMakeLists.txt
TXGrid/include/impl/: coord_map.hpp  grid_system.hpp  grid_utils.hpp
TXGrid/include/tx/: grid.h
TXGrid/src/: coord_map.cpp  grid_system.cpp  grid_utils.cpp
TXJson/: CMakeLists.txt
TXJson/include/impl/: json_parser.hpp  json_type_traits.hpp  json_types.hpp
TXJson/include/tx/: json.h
TXJson/src/: json_parser.cpp
TXLib/src/: txlib.hpp
TXMap/: CMakeLists.txt
TXMap/include/impl/: kvmap.hpp  set_view.hpp
TXMap/include/tx/: map.h
TXMath/: CMakeLists.txt
TXMath/include/impl/: basic_utils.hpp  geom_util_classes.hpp  geom_utils.hpp  geometry.hpp  math_line.hpp
TXMath/include/tx/: math.h
TXPixels/: CMakeLists.txt
TXResource/: CMakeLists.txt
TXResource/include/impl/: image.hpp  io_file.hpp
TXResource/include/tx/: resource.h
TXResource/src/: detail.cpp  image.cpp  io_file.cpp
TXUtility/: CMakeLists.txt
TXUtility/include/impl/: type_traits.hpp
TXUtility/include/tx/: algorithm.hpp  bit_trick.hpp  random.hpp  type_traits.hpp  utility.h
