# Copyright (c) 2025 TXLib. Licensed under the MIT License.

cmake_minimum_required(VERSION 4.2)

# Modules
add_subdirectory("TXMath")
add_subdirectory("TXMap")
add_subdirectory("TXJson")
add_subdirectory("TXGrid")
add_subdirectory("TXResource")
add_subdirectory("TXData")
add_subdirectory("TXGraphics")
add_subdirectory("TXUtility")